@@ -5,6 +5,9 @@
 * Use environment markers to filter packages before determining if a
   required wheel is supported. Solves (:issue:`3254`).
 
+* Return a failing exit status when `pip install`, `pip download`, or
+  `pip wheel` is called with no requirements. (:issue:`2720`, :pull:`2721`)
+
 
 **8.1.1 (2016-03-17)**
 
